--- a/css/base.css
+++ b/css/base.css
@@ -23,3 +23,9 @@ footer { border-top: 1px solid #eee; padding: 1rem 0; margin-top: 3rem; color: #
 
 /* Accessible focus outline */
 :focus { outline: 2px solid #f2880f; outline-offset: 2px; }
+
+/* Utility spacing */
+.pad-y-2 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
